# smart_kitchen_ws

./: README.md  run  run_sim  useful_commands.md
assets/: dynamic_approach.dot  fixed_approach.dot  generate_architecture_diagram.py  generate_dynamic_diagram.py  generate_fixed_diagram.py
src/aruco_human_tracker/: package.xml  setup.cfg  setup.py
src/aruco_human_tracker/aruco_human_tracker/: aruco_all_distance_node.py  aruco_creater.py  human_pose_from_aruco.py
src/aruco_human_tracker/launch/: aruco_human.launch.py
src/aruco_tracker/: README.md  package.xml  setup.py
src/aruco_tracker/aruco_tracker/: aruco_all_distance_node.py
src/smart_kitchen_description/: CMakeLists.txt  package.xml
src/smart_kitchen_description/config/: sim_ros2_controllers.yaml
src/smart_kitchen_description/launch/: smart_kitchen.launch.py
src/smart_kitchen_description/meshes/: cup_blue.mtl  cup_blue_filled.mtl  kitchen.mtl
src/smart_kitchen_description/models/cup_blue/: model.config  model.sdf
src/smart_kitchen_description/models/cup_blue_filled/: model.sdf
src/smart_kitchen_description/models/cup_red/: model.config  model.sdf
src/smart_kitchen_description/models/cup_red_filled/: model.config  model.sdf
src/smart_kitchen_description/urdf/: kitchen_robot.xacro  static_human.urdf
src/smart_kitchen_description/worlds/: smart_kitchen.world
src/smart_kitchen_interfaces/: CMakeLists.txt  package.xml
src/smart_kitchen_interfaces/action/: ExecuteCommand.action  MoveToJoints.action
src/smart_kitchen_logic/: README.md  package.xml  setup.cfg  setup.py
src/smart_kitchen_logic/config/: commands.toml  waypoints.toml
src/smart_kitchen_logic/smart_kitchen_logic/: command_executor.py  command_sequence_client.py  cup_node.py  fake_rail_movement_translator.py  fake_rail_node.py  human_detection_node.py  init_node.py  moving_node.py  planning_node.py  rail_node.py  robot_controller_node.py  robot_mover_node.py  safety_monitor.py  safety_monitor_node.py  tf_transformation.py  visual_marker_node.py
src/smart_kitchen_logic/test/: test_moving_node.py
src/smart_kitchen_model/: CMakeLists.txt  README.md  package.xml
src/smart_kitchen_model/launch/: smart_kitchen.launch.py
src/smart_kitchen_model/meshes/: cup_red_filled.mtl  kitchen.mtl
src/smart_kitchen_model/models/cup_blue/: model.sdf
src/smart_kitchen_model/models/cup_blue_filled/: model.config
src/smart_kitchen_model/models/cup_red_filled/: model.sdf
src/smart_kitchen_model/models/kitchen/: model.config  model.sdf
src/smart_kitchen_model/models/visual_marker/: model.config  model.sdf
src/smart_kitchen_model/urdf/: kitchen_robot.xacro
src/smart_kitchen_pose_teaching/: README.md  package.xml  setup.cfg  setup.py
src/smart_kitchen_pose_teaching/smart_kitchen_pose_teaching/: pick_place_node.py  positions.toml
src/smart_kitchen_pose_teaching/smart_kitchen_pose_teaching/utils/: goto_carriage_lift.py  goto_position.py  record_position.py
src/smart_kitchen_simulation/: README.md  package.xml  setup.cfg  setup.py
src/smart_kitchen_simulation/smart_kitchen_simulation/: cup_position_node.py  fake_human_node.py  rail_simulator_node.py  visual_debug_node.py
(+1 files in other folders)
